check_output_2.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/jokkeruokolainen/Documents/Solita/Ouroboros/ouroboros-codegraph-rust/codegraph-rust/crates/codegraph-napi/Cargo.toml
workspace: /Users/jokkeruokolainen/Documents/Solita/Ouroboros/ouroboros-codegraph-rust/codegraph-rust/Cargo.toml
    Checking codegraph-vector v1.0.0 (/Users/jokkeruokolainen/Documents/Solita/Ouroboros/ouroboros-codegraph-rust/codegraph-rust/crates/codegraph-vector)
warning: unused imports: `OptimizationResult` and `QuantizedBatch`
 --> crates/codegraph-vector/tests/model_optimization_tests.rs:5:5
  |
5 |     OptimizationResult, ParallelConfig, QuantizationConfig, QuantizationMethod, QuantizedBatch,
  |     ^^^^^^^^^^^^^^^^^^                                                          ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tokio_test`
 --> crates/codegraph-vector/tests/model_optimization_tests.rs:9:5
  |
9 | use tokio_test;
  |     ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `Arc`
   --> crates/codegraph-vector/tests/rag_tests.rs:243:26
    |
243 |         let rag_system = Arc::new(
    |                          ^^^ use of undeclared type `Arc`
    |
help: consider importing this struct
    |
  3 +     use std::sync::Arc;
    |

error[E0412]: cannot find type `Arc` in this scope
   --> crates/codegraph-vector/tests/rag_tests.rs:252:28
    |
252 |             let rag_clone: Arc<RAGSystem> = Arc::clone(&rag_system);
    |                            ^^^ not found in this scope
    |
help: consider importing this struct
    |
  3 +     use std::sync::Arc;
    |

error[E0433]: failed to resolve: use of undeclared type `Arc`
   --> crates/codegraph-vector/tests/rag_tests.rs:252:45
    |
252 |             let rag_clone: Arc<RAGSystem> = Arc::clone(&rag_system);
    |                                             ^^^ use of undeclared type `Arc`
    |
help: consider importing this struct
    |
  3 +     use std::sync::Arc;
    |

warning: unused import: `QueryResult`
 --> crates/codegraph-vector/tests/rag_tests.rs:4:33
  |
4 |     use codegraph_vector::rag::{QueryResult, RAGConfig, RAGSystem};
  |                                 ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
 --> crates/codegraph-vector/tests/rag_tests.rs:5:9
  |
5 |     use std::collections::HashMap;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0560]: struct `OptimizationTestConfig` has no field named `quantization_bits`
  --> crates/codegraph-vector/tests/model_optimization_tests.rs:26:13
   |
26 |             quantization_bits: 8,
   |             ^^^^^^^^^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
26 |             _quantization_bits: 8,
   |             +

error[E0560]: struct `OptimizationTestConfig` has no field named `compression_ratio`
  --> crates/codegraph-vector/tests/model_optimization_tests.rs:27:13
   |
27 |             compression_ratio: 0.25,
   |             ^^^^^^^^^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
27 |             _compression_ratio: 0.25,
   |             +

error[E0560]: struct `OptimizationTestConfig` has no field named `accuracy_threshold`
  --> crates/codegraph-vector/tests/model_optimization_tests.rs:28:13
   |
28 |             accuracy_threshold: 0.95,
   |             ^^^^^^^^^^^^^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
28 |             _accuracy_threshold: 0.95,
   |             +

error[E0282]: type annotations needed for `tokio::task::JoinHandle<_>`
   --> crates/codegraph-vector/tests/rag_tests.rs:253:17
    |
253 |             let handle = tokio::spawn(async move {
    |                 ^^^^^^
...
263 |             let query_result = result.expect("Task panicked").expect("Query failed");
    |                                ------------------------------ type must be known at this point
    |
help: consider giving `handle` an explicit type, where the placeholders `_` are specified
    |
253 |             let handle: tokio::task::JoinHandle<_> = tokio::spawn(async move {
    |                       ++++++++++++++++++++++++++++

For more information about this error, try `rustc --explain E0560`.
warning: `codegraph-vector` (test "model_optimization_tests") generated 2 warnings
error: could not compile `codegraph-vector` (test "model_optimization_tests") due to 3 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
Some errors have detailed explanations: E0282, E0412, E0433.
For more information about an error, try `rustc --explain E0282`.
warning: `codegraph-vector` (test "rag_tests") generated 2 warnings
error: could not compile `codegraph-vector` (test "rag_tests") due to 4 previous errors; 2 warnings emitted
